tests/ui/consts/rustc-impl-const-stability.stderr
error: const `impl` for trait `Default` which is not marked with `#[const_trait]`
  --> $DIR/rustc-impl-const-stability.rs:15:12
   |
LL | impl const Default for Data {
   |            ^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: aborting due to previous error

